                                      Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
  - 02-11-2004 added: GUI code for monkeyh1
  - 02-11-2004 added: Context menu to My Pictures
  - 02-11-2004 added: Random slideshow ability
  - 02-11-2004 added: Recursive thumb generation
  - 02-11-2004 added: Folder thumbs for picture folders
  - 02-11-2004 fixed: Remote INFO button wasn't working for show file info
  - 02-11-2004 updated: German language file
  - 02-11-2004 fixed: After showing video/album info item is selected
  - 02-11-2004 added: my music songs, Shoutcast Top 500 streams share
  - 01-11-2004 updated: Dutch language file (Thnx to joepmeloenx)
  - 01-11-2004 updated: German (Austrian) language file (Thnx to CEOMR)
  - 31-10-2004 updated: Dutch language file (Thnx to joepmeloenx)
  - 31-10-2004 fixed: album info is not displayed in songs
  - 31-10-2004 updated: German language file
  - 31-10-2004 updated: Romanian language file (Thnx to bompy)
  - 31-10-2004 updated: Portuguese (Brazil) language file (Thnx to wellingtontu)
  - 31-10-2004 updated: Polish language file (Thnx to napek)
  - 31-10-2004 updated: French language file (Thnx to modhack2)
  - 31-10-2004 added: [ 1051008 ] CD-TEXT support (doesn't work on all drives!!!) (Thnx to mog)
  - 31-10-2004 added: <allowoverlay> tag to give skinners the ability to enable/disable the overlay windows via xml file
  - 30-10-2004 added: SF patch #1056254	New simple-stacking mode for video
  - 30-10-2004 added: Possibility for skinners to define their own windows (custom*.xml where * is a number)
  - 30-10-2004 added: SF patch #1056175 FTP server uses /E/ now instead of /E:/
  - 30-10-2004 fixed: Bug in new video code (hopefully!)